Fix hamburger menu overlap

--- a/src/components/miscellaneous/SlantedBanner.css
+++ b/src/components/miscellaneous/SlantedBanner.css
@@ -21,7 +21,7 @@ body {
 .banner-top-heading {
   font-family: "Spartan";
   position: absolute;
-  top: 38%;
+  top: 40%;
   color: white;
   text-align: center;
   left: 50%;
